# mcrt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  build.sh  constants.h  detector.cpp  detector.h  layer.cpp  layer.h  mcrt.cpp  mcrt_integration_tests.cpp  mcrt_unit_tests.cpp  phase_functions.cpp  phase_functions.h  photon.cpp  photon.h  slab.cpp  slab.h  test_helpers.h
